# DirectDrawWrapper

./: LICENSE  README.md
src/: CMakeLists.txt  IniFile.cpp  IniFile.hpp  MyDirectDrawClipperProxy.cpp  MyDirectDrawClipperProxy.hpp  MyDirectDrawClipperSw.cpp  MyDirectDrawClipperSw.hpp  MyDirectDrawPaletteProxy.cpp  MyDirectDrawPaletteProxy.hpp  MyDirectDrawPaletteSw.cpp  MyDirectDrawPaletteSw.hpp  MyDirectDrawProxy.cpp  MyDirectDrawProxy.hpp  MyDirectDrawSurfaceProxy.cpp  MyDirectDrawSurfaceProxy.hpp  MyDirectDrawSurfaceSw.cpp  MyDirectDrawSurfaceSw.hpp  MyDirectDrawSurfaceSw1.cpp  MyDirectDrawSurfaceSw2.cpp  MyDirectDrawSurfaceSw3.cpp  MyDirectDrawSurfaceSw4.cpp  MyDirectDrawSurfaceSw7.cpp  MyDirectDrawSw.cpp  MyDirectDrawSw.hpp  MyDirectDrawSw1.cpp  MyDirectDrawSw2.cpp  MyDirectDrawSw4.cpp  MyDirectDrawSw7.cpp  MyWinapiFuncs.cpp  MyWinapiFuncs.hpp  Settings.cpp  Settings.hpp  common.cpp  common.hpp  common_structs.cpp  common_structs.hpp  ddraw.h  ddraw_export.h  libmain.cpp  libmain.hpp  (+2 more)
src/simple_logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/tools/: CMakeLists.txt  com_ptr.cpp  com_ptr.hpp  func_hook.cpp  func_hook.hpp  handle_ptr.cpp  handle_ptr.hpp  help_funcs.cpp  help_funcs.hpp  window_hook.cpp  window_hook.hpp
